# beyan

./: .gitignore  AGENT_BRIEF.md  AGENT_PROMPT.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_TR.md  test_evidence.md
v2/: .env.example  .gitignore  Dockerfile  FAQ.md  GLOSSARY.md  MANIFEST.yaml  MODE_TRANSITIONS.md  QUICK_START.md  README.md  TURKISH_PROMPTS.md  USAGE_GUIDE.md  api_clients.py  compiler.py  discovery.py  orchestrator.py  pyproject.toml  pyrightconfig.json
v2/.github/workflows/: integrity-check.yml
v2/beyan_agentic.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
v2/cli/: analyzer.py
v2/core_prompts/en/: BASE_PROMPT.md  ORCHESTRATOR_PROMPT.md
v2/core_prompts/tr/: BASE_PROMPT.md  ORCHESTRATOR_PROMPT.md
v2/modules/core/en/: accessibility-analysis.md  analytics-analysis.md  api-design-analysis.md  browser-compatibility.md  code-quality-patterns.md  cost-analysis.md  database-analysis.md  developer-experience.md  i18n-analysis.md  infrastructure.md  license-analysis.md  mobile-responsive.md  monitoring-observability.md  refactoring-guide.md  resilience-analysis.md  scoring-criteria.md  seo-analysis.md  state-management.md  testing-strategy.md
v2/modules/core/tr/: browser-compatibility.md  cost-analysis.md  file-structure-analysis.md  i18n-analysis.md  license-analysis.md  refactoring-guide.md  resilience-analysis.md  scoring-criteria.md  ui-ux-analysis.md  (+1 more)
v2/sessions/: test_session.json
v2/tests/: test_beyan.py  test_compiler.py  test_discovery_deep.py  test_safety.py
v2/tools/: merge_modules.py
(+232 files in other folders)
